# simple-sendfile

./: .travis.yml  configure.ac  simple-sendfile.cabal
.github/workflows/: haskell.yml
Network/: Sendfile.hs
Network/Sendfile/: BSD.hsc  Fallback.hs  IOVec.hsc  Linux.hsc  MacOS.hsc  Types.hs  lnxsendfile.c
System/Linux/: Sendfile.hs
System/Posix/IO/: Sendfile.hs
System/Posix/IO/Sendfile/: ByteString.hs  Internal.hsc  Types.hs
test/: PosixSendfileSpec.hs  SendfileSpec.hs  Spec.hs  Test.hs  inputFile  setup.sh
