Name:                   simple-sendfile
Version:                0.0.0
Author:                 Kazu Yamamoto <kazu@iij.ad.jp>
Maintainer:             Kazu Yamamoto <kazu@iij.ad.jp>
License:                BSD3
License-File:           LICENSE
Synopsis:               Cross platform library for the sendfile system call
Description:            Cross platform library for the sendfile system call.
                        This library tries to call minimum system calls which
                        are the bottleneck of web servers.
Category:               Network
Cabal-Version:          >= 1.6
Build-Type:             Simple

Library
  if impl(ghc >= 6.12)
    GHC-Options:        -Wall -fno-warn-unused-do-bind
  else
    GHC-Options:        -Wall
  Exposed-Modules:      Network.Sendfile
  Other-Modules:        Network.Sendfile.Types
  Build-Depends:        base >= 4 && < 5, network
  -- FIXME Need to check
  if os(freebsd) || os(netbsd) || os(openbsd)
    CPP-Options:   -DOS_BSD
    Other-Modules: Network.Sendfile.BSD
  else
    if os(darwin)
      CPP-Options:   -DOS_MacOS
      Other-Modules: Network.Sendfile.MacOS
      Build-Depends: unix
    else
      if os(linux)
        CPP-Options:   -DOS_Linux
        Other-Modules: Network.Sendfile.Linux
      else
        if os(windows)
          CPP-Options:     -DOS_Windows
          Build-Depends:   Win32
          Extra-Libraries: mswsock
          Other-Modules:   Network.Sendfile.Windows
        else
          Build-Depends: bytestring

Source-Repository head
  Type:                 git
  Location:             git://github.com/kazu-yamamoto/simple-sendfile
