Name:                   simple-sendfile
Version:                0.2.19
Author:                 Kazu Yamamoto <kazu@iij.ad.jp>
Maintainer:             Kazu Yamamoto <kazu@iij.ad.jp>
License:                BSD3
License-File:           LICENSE
Synopsis:               Cross platform library for the sendfile system call
Description:            Cross platform library for the sendfile system call.
                        This library tries to call minimum system calls which
                        are the bottleneck of web servers.
Category:               Network
Cabal-Version:          >= 1.10
Build-Type:             Configure

extra-source-files:
                config.guess config.sub install-sh
                configure.ac configure
                Network/Sendfile/HsConfig.h.in
extra-tmp-files:
                config.log config.status autom4te.cache
                Network/Sendfile/HsConfig.h

Flag allow-bsd
  Description:          Allow use of BSD sendfile (disable on GNU/kFreeBSD)
  Default:              True

Library
  include-dirs: Network/Sendfile
  includes:     HsConfig.h
  Default-Language:     Haskell2010
  GHC-Options:          -Wall
  Exposed-Modules:      Network.Sendfile
  Other-Modules:        Network.Sendfile.Types
  Build-Depends:        base >= 4 && < 5
                      , network
                      , bytestring
  -- NetBSD and OpenBSD don't have sendfile
  if os(freebsd) && flag(allow-bsd)
    CPP-Options:        -DOS_BSD
    Other-Modules:      Network.Sendfile.BSD
                        Network.Sendfile.IOVec
    Build-Depends:      unix
  else
    if os(darwin)
      CPP-Options:      -DOS_MacOS
      Other-Modules:    Network.Sendfile.BSD
                        Network.Sendfile.IOVec
      Build-Depends:    unix
    else
      if os(linux)
        CPP-Options:    -DOS_Linux
        Other-Modules:  Network.Sendfile.Linux
        Build-Depends:  unix
        c-sources:      Network/Sendfile/lnxsendfile.c
      else
        Other-Modules:  Network.Sendfile.Fallback
        Build-Depends:  conduit         >= 1.0 && < 1.3
                      , conduit-extra   >= 1.0 && < 1.2
                      , transformers    >= 0.2.2 && < 0.5
                      , resourcet

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       test
  Main-Is:              SendfileSpec.hs
  GHC-Options:          -Wall
  Build-Depends:        base
                      , HUnit
                      , bytestring
                      , conduit
                      , conduit-extra
                      , resourcet
                      , directory
                      , hspec >= 1.3
                      , network
                      , process
                      , simple-sendfile
                      , unix

Source-Repository head
  Type:                 git
  Location:             git://github.com/kazu-yamamoto/simple-sendfile
